[tool.poetry]
name = "letra-e-musica"
version = "0.1.0"
description = ""
authors = ["Íris <iris.balk04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
requests = "^2.32.3"
pywhatkit = "^5.4"
deep-translator = "^1.11.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
